# ci-tests

./: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  configure~  deb.deb  func.cpp  func.h  main.cpp  program
.deps/: func.Po  main.Po
.github/workflows/: automake.yml  ci.yml  tests.yml
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
deb/DEBIAN/: control
tests/: test  test.cpp
